Fixed missing module-info issue.
Signed-off-by: Tomas Kraus <Tomas.Kraus@oracle.com>