@@ -81,9 +81,10 @@
                                 <configuration>
                                     <source>9</source>
                                     <target>9</target>
-                                    <includes>
-                                        <include>module-info.java</include>
-                                    </includes>
+                                    <compilerArgs>
+                                        <arg>--add-reads</arg>
+                                        <arg>com.sun.istack.tools=ALL-UNNAMED</arg>
+                                    </compilerArgs>
                                </configuration>
                             </execution>
                             <execution>
